--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,10 @@ env:
 
 before_install:
   - sudo apt-get install libstdc++6
+  - sudo apt-get dist-upgrade
 
 script:
   - curl -L "${URL}/v${HUGO}/hugo_extended_${HUGO}_Linux-64bit.tar.gz" | gunzip | tar xvf -
+  - ls -alFh
+  # do we need to give the binary executable permissions?
   - ./hugo version
