--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,8 @@
-dist: trusty
+# dist: trusty
 
 env:
   HUGO=0.50
   URL=https://github.com/gohugoio/hugo/releases/download
-
-before_install:
-  - sudo apt-get install libstdc++6
-  - sudo apt-get dist-upgrade
 
 script:
   - curl -L "${URL}/v${HUGO}/hugo_extended_${HUGO}_Linux-64bit.tar.gz" | gunzip | tar xvf -
