--- a/.travis.yml
+++ b/.travis.yml
@@ -7,5 +7,5 @@ env:
 script:
   - curl -L "${URL}/v${HUGO}/hugo_extended_${HUGO}_Linux-64bit.tar.gz" | gunzip | tar xvf -
   - ls -alFh
-  # do we need to give the binary executable permissions?
+  - chmod +x hugo
   - ./hugo version
