--- a/.travis.yml
+++ b/.travis.yml
@@ -5,14 +5,13 @@ language: node_js
 env:
   HUGO=0.50
   URL=https://github.com/gohugoio/hugo/releases/download
-  CXX="g++-4.8"
-  CC="gcc-4.8"
 
 addons:
   apt:
+    sources:
+      - ubuntu-toolchain-r-test
     packages:
-      - libstdc++6
-      - gcc-4.8
+      - libstdc++-4.9-dev
 
 script:
   - curl -L "${URL}/v${HUGO}/hugo_extended_${HUGO}_Linux-64bit.tar.gz" | tar xzvf -
