--- a/.travis.yml
+++ b/.travis.yml
@@ -6,12 +6,10 @@ env:
   HUGO=0.50
   URL=https://github.com/gohugoio/hugo/releases/download
 
-addons:
-  apt:
-    sources:
-      - ubuntu-toolchain-r-test
-    packages:
-      - libstdc++-4.9-dev
+before_install:
+  - add-apt-repository ppa:ubuntu-toolchain-r/test -y
+  - apt-get update
+  - apt-get install libstdc++6
 
 script:
   - curl -L "${URL}/v${HUGO}/hugo_extended_${HUGO}_Linux-64bit.tar.gz" | tar xzvf -
