--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,10 @@ env:
   URL=https://github.com/gohugoio/hugo/releases/download
 
 before_install:
-  - sudo apt-get install -y software-properties-common
-  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
-  - sudo apt-get dist-upgrade
+  - wget https://repo.continuum.io/miniconda/Miniconda3-3.7.0-Linux-x86_64.sh -O miniconda.sh
+  - bash ./miniconda.sh -b -p miniconda
+  - export PATH="$PATH:$pwd"
+  - conda install libgcc
 
 script:
   - curl -L "${URL}/v${HUGO}/hugo_extended_${HUGO}_Linux-64bit.tar.gz" | tar xzvf -
