--- a/.travis.yml
+++ b/.travis.yml
@@ -7,10 +7,19 @@ env:
   URL=https://github.com/gohugoio/hugo/releases/download
 
 before_install:
-  - wget https://repo.continuum.io/archive/Anaconda2-5.3.1-Linux-x86.sh -O ~/anaconda.sh
-  - bash ~/anaconda.sh -b -p $HOME/anaconda
-  - export PATH="$HOME/anaconda/bin:$PATH"
-  - conda install -y libgcc
+  - >
+  sudo apt-get update && \
+  sudo apt-get install build-essential software-properties-common -y && \
+  sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y && \
+  sudo apt-get update && \
+  sudo apt-get install gcc-snapshot -y && \
+  sudo apt-get update && \
+  sudo apt-get install gcc-6 g++-6 -y && \
+  sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-6 60 --slave /usr/bin/g++ g++ /usr/bin/g++-6 && \
+  sudo apt-get install gcc-4.8 g++-4.8 -y && \
+  sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-4.8 60 --slave /usr/bin/g++ g++ /usr/bin/g++-4.8 && \
+  sudo update-alternatives --config gcc && \
+  gcc -v
 
 script:
   - curl -L "${URL}/v${HUGO}/hugo_extended_${HUGO}_Linux-64bit.tar.gz" | tar xzvf -
