--- a/.travis.yml
+++ b/.travis.yml
@@ -2,21 +2,15 @@ dist: trusty
 sudo: false
 language: node_js
 node_js:
-  - "iojs"
-  - "7"
+  - "10.14.0"
 
 env:
   HUGO=0.50
   URL=https://github.com/gohugoio/hugo/releases/download
 
 before_install:
-  - sudo apt-get update -y 
-  - sudo apt-get install build-essential software-properties-common -y 
-  - sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y 
-  - sudo apt-get update -y 
-  - sudo apt-get install gcc-8 g++-8 -y 
-  - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-8 60 --slave /usr/bin/g++ g++ /usr/bin/g++-8 
-  - sudo update-alternatives --config gcc 
+  - sudo apt update -y 
+  - sudo apt install gcc -y
   - gcc -v
 
 script:
