--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ env:
 before_install:
   - sudo apt-get update -y
   - ldd --version
-  - sudo apt-get install libc6 -y
+  - sudo apt-get install glibc -y
   - ldd --version
 
 script:
