--- a/.travis.yml
+++ b/.travis.yml
@@ -1,20 +1,19 @@
 dist: trusty
 sudo: false
-language: node_js
-node_js:
-  - "10.14.0"
+
+matrix:
+  include:
+    - language: node_js
+      node_js:
+      - "10.14.0"
+    - language: go
+      go:
+      - master
 
 env:
   HUGO=0.50
   URL=https://github.com/gohugoio/hugo/releases/download
 
-before_install:
-  - sudo apt-get update -y
-  - ldd --version
-  - sudo apt-get install glibc -y
-  - ldd --version
-
-script:
-  - curl -L "${URL}/v${HUGO}/hugo_extended_${HUGO}_Linux-64bit.tar.gz" | tar xzvf -
-  - ls -alFh
-  - ./hugo version
+install:
+  - go get github.com/gohugoio/hugo
+  - hugo version
