--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,4 @@
 dist: trusty
-sudo: false
 
 language: go
 go:
@@ -22,5 +21,5 @@ install:
   - pwd
   
 script:
-  - $HOME/src/hugo/hugo version
+  - ./hugo version
   - echo "Write code to deploy your site here"
